<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CalculadoraConFragmentos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
     <string name="btnAC">AC</string>
    <string name="btnMM">+/-</string>
    <string name="btnPorcentaje">%</string>
    <string name="btnDiv">/</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnMul">*</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btnRes">-</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btnAdd">+</string>
    <string name="btn0">0</string>
    <string name="btnCom">,</string>
    <string name="btnIgual">=</string>

</resources>
